--- a/issueTracker-main/package.json
+++ b/issueTracker-main/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "NageshSingh",
+  "author": "Pratham",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
